changed column spacing between map and restaurant hours. Corrected form grid cols.

--- a/css/general.css
+++ b/css/general.css
@@ -98,6 +98,10 @@ h4 {
   line-height: 1.2;
 }
 
+td {
+  padding: 0.2rem 0.8rem;
+}
+
 .container {
   max-width: 120rem;
   margin: 0 auto;
